# hand_eye_calibration

./: .gitignore  .gitmodules  LICENSE  README.md
charuco_detector/config/: 002.ini  01.ini  big_board_calibration.ini  big_boardv2_calibration.ini  eye_calibration.ini  eye_in.ini  eye_in_hand_calibration.ini  hand_eye_calibration.ini  hand_eye_calibration_old.ini  test1080.ini  test_calibration.ini
charuco_detector/launch/: charuco_detector.launch  ur5_eye_in_hand.launch  ur5_eye_to_hand.launch
charuco_detector/scripts/: charuco_generator.py
charuco_detector/src/: charuco_detector.cpp
charuco_detector/yaml/: charuco.yaml
hand_eye_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
hand_eye_flexbe_behaviors/manifest/: hand_eye_calibration.xml  manual_hand_eye_calibration.xml
hand_eye_flexbe_behaviors/src/hand_eye_flexbe_behaviors/: manual_hand_eye_calibration_sm.py
hand_eye_flexbe_states/: CMakeLists.txt  package.xml  setup.py
hand_eye_flexbe_states/src/hand_eye_flexbe_states/: compute_calib.py  execute_traj.py  find_charuco.py  get_calib_pose.py  joints_plan.py  move_charuco_center.py  move_robot_manually.py  pose_plan.py
